--- a/functions/views/login.html
+++ b/functions/views/login.html
@@ -1,1 +1,18 @@
-<a href="<%= oauthUrl %>">Login</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=2.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="/static/css/login.css">
+	<title>The Bin | Login</title>
+</head>
+<body>
+	<div class="splash_screen">
+		<div class="login">
+			<h1>The Bin</h1>
+			<a href="<%= oauthUrl %>">Login</a>
+		</div>
+	</div>
+</body>
+</html>
