--- a/public/static/css/login.css
+++ b/public/static/css/login.css
@@ -22,7 +22,7 @@ body {
 }
 
 .login {
-	background: linear-gradient(0deg, rgba(37, 37, 37, 0) 0%, rgba(0, 0, 0, 1) 100%);
+	background: linear-gradient(0deg, rgba(37, 37, 37, 0) 0%, rgba(0, 0, 0, .6) 100%);
 	grid-area: login;
 	text-align: center;
 	padding: 2em;
